# c_facilities

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
inc/cfac/: bench_utils.h  bitdarray.h  darray.h  list.h  log.h  mock_utils.h  refcount.h  ringbuffer.h  span.h  stat.h  test_utils.h
src/: bench_utils.c  bitdarray.c  darray.c  darray.h  hashtable.c  hashtable.h  list.c  list.h  log.c  log.h  mock_utils.c  refcount.c  refcount.h  ringbuffer.c  span.c  span.h  stat.h  test_utils.c  test_utils.h
tst/: bench_utils.test.c  bitdarray.test.c  darray.bench.c  darray.test.c  hashtable.test.c  list.test.c  log.test.c  mock_utils.test.c  refcount.test.c  ringbuffer.test.c  span.test.c  stat.test.c  test_utils.test.c
